controller y cnfig agregados
